--- a/WechatBotWeb/ClientApp/src/app/app.component.html
+++ b/WechatBotWeb/ClientApp/src/app/app.component.html
@@ -16,5 +16,10 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
+  <li>
+    <h2><a routerLink="/dashboard">dashboard</a></h2>
+    <h2><a routerLink="/">home</a></h2>
+  </li>
 </ul>
+<router-outlet></router-outlet>
 
